--- a/.gitignore
+++ b/.gitignore
@@ -61,6 +61,7 @@ Carthage/
 
 fastlane/report.xml
 fastlane/screenshots
+fastlane/test_output
 
 # Sensitive details about remote backup
 RemoteSettings.plist
