Checkout submodules during release build

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -24,6 +24,8 @@ jobs:
       FASTLANE_LANE: release
     steps:
       - checkout
+      - run: git submodule sync --recursive
+      - run: git submodule update --recursive --init
       - run: bundle install
       - run:
           name: Fastlane
