--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -31,6 +31,7 @@ jobs:
           name: Fastlane
           command: bundle exec fastlane $FASTLANE_LANE
           no_output_timeout: 20m
+          resource_class: macos.x86.medium.gen2
 
 workflows:
   build-test-release:
