Increment build number based on pipeline number

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -29,7 +29,7 @@ jobs:
       - run: bundle install
       - run:
           name: Fastlane
-          command: bundle exec fastlane $FASTLANE_LANE
+          command: bundle exec fastlane release build_number:<< pipeline.number >>
           no_output_timeout: 20m
           resource_class: macos.x86.medium.gen2
 
