--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,9 +2,9 @@
 version: 2.1
 jobs:
   build-and-test:
-    resource_class: macos.m1.large.gen1
+    resource_class: macos.x86.medium.gen2
     macos:
-      xcode: 14.3.0
+      xcode: 14.3.1
     environment:
       FL_OUTPUT_DIR: output
       FASTLANE_LANE: test
