--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,9 +2,9 @@
 version: 2.1
 jobs:
   build-and-test:
-    resource_class: macos.x86.medium.gen2
+    resource_class: macos.m1.medium.gen1
     macos:
-      xcode: 14.3.1
+      xcode: "15.2"
     environment:
       FL_OUTPUT_DIR: output
       FASTLANE_LANE: test
@@ -18,9 +18,9 @@ jobs:
           command: bundle exec fastlane scan --scheme "CarePartner" --device "iPhone 14" --clean 
 
   release:
-    resource_class: macos.x86.medium.gen2
+    resource_class: macos.m1.medium.gen1
     macos:
-      xcode: 14.3.1
+      xcode: "15.2"
     environment:
       FL_OUTPUT_DIR: output
       FASTLANE_LANE: release
