--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,7 +4,7 @@ jobs:
   build-and-test:
     resource_class: macos.m1.medium.gen1
     macos:
-      xcode: "15.2"
+      xcode: 15.2.0
     environment:
       FL_OUTPUT_DIR: output
       FASTLANE_LANE: test
@@ -20,7 +20,7 @@ jobs:
   release:
     resource_class: macos.m1.medium.gen1
     macos:
-      xcode: "15.2"
+      xcode: 15.2.0
     environment:
       FL_OUTPUT_DIR: output
       FASTLANE_LANE: release
