--- a/CarePartner.xcodeproj/xcshareddata/xcschemes/CarePartner.xcscheme
+++ b/CarePartner.xcodeproj/xcshareddata/xcschemes/CarePartner.xcscheme
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Scheme
-   LastUpgradeVersion = "1430"
+   LastUpgradeVersion = "1540"
    version = "1.3">
    <BuildAction
-      parallelizeBuildables = "NO"
+      parallelizeBuildables = "YES"
       buildImplicitDependencies = "YES">
       <BuildActionEntries>
          <BuildActionEntry
