test auto signing

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -44,5 +44,5 @@ workflows:
                 - main
                 - test
               
-          requires:
-            - build-and-test
+          #requires:
+           # - build-and-test
