--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -12,7 +12,7 @@ jobs:
       - run: git submodule sync --recursive
       - run: git submodule update --recursive --init
       - run:
-          name: Fastlane
+          name: Fastlane - Test
           command: fastlane scan --scheme "CarePartner" --clean
 
   release:
@@ -24,7 +24,7 @@ jobs:
       - run: git submodule sync --recursive
       - run: git submodule update --recursive --init
       - run:
-          name: Fastlane
+          name: Fastlane - Release
           command: fastlane release build_number:<< pipeline.number >>
 
 workflows:
