--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -40,5 +40,5 @@ workflows:
                 - main
                 - test
               
-          requires:
-            - build-and-test
+          #requires:
+          #  - build-and-test
