--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,7 +14,7 @@ jobs:
           command: git submodule sync --recursive && git submodule update --recursive --init
       - run:
           name: Fastlane test
-          command: fastlane scan --scheme "CarePartner" --clean
+          command: fastlane test
 
   release:
     resource_class: m4pro.medium
